shared/src/test/data/yeast/invalid-json/incomplete-entry-3.jyt
BeginDocument       0,  1,  0 ''
BeginMapping        0,  1,  0 '{'
LineBreak           1,  1,  1 '\n'
WhiteSpace          2,  2,  0 '  '
BeginScalar         4,  2,  2 ''
Indicator           4,  2,  2 '\"'
Text                5,  2,  3 'key1\n  '
Indicator          12,  3,  2 '\"'
EndScalar          13,  3,  3 ''
Error              13,  3,  3 'key2\"'
Indicator          18,  3,  8 ':'
WhiteSpace         19,  3,  9 ' '
BeginScalar        20,  3, 10 ''
Indicator          20,  3, 10 '\"'
Text               21,  3, 11 'value2'
Indicator          27,  3, 17 '\"'
EndScalar          28,  3, 18 ''
Indicator          28,  3, 18 ','
LineBreak          29,  3, 19 '\n'
WhiteSpace         30,  4,  0 '  '
BeginScalar        32,  4,  2 ''
Indicator          32,  4,  2 '\"'
Text               33,  4,  3 'key3'
Indicator          37,  4,  7 '\"'
EndScalar          38,  4,  8 ''
Indicator          38,  4,  8 ':'
WhiteSpace         39,  4,  9 ' '
BeginScalar        40,  4, 10 ''
Indicator          40,  4, 10 '\"'
Text               41,  4, 11 'value3'
Indicator          47,  4, 17 '\"'
EndScalar          48,  4, 18 ''
LineBreak          48,  4, 18 '\n'
EndMapping         49,  5,  0 '}'
